== 1.0.0 / 2007-10-03

* 1 major enhancement
  * Birthday!
