@@ -4,3 +4,4 @@ README.txt
 Rakefile
 bin/mailtrap
 lib/mailtrap.rb
+lib/mailbox_service.rb
