@@ -5,7 +5,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Class: Mailtrap</title>
+  <title>Module: Mailtrap</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <meta http-equiv="Content-Script-Type" content="text/javascript" />
   <link rel="stylesheet" href=".././rdoc-style.css" type="text/css" media="screen" />
@@ -49,12 +49,16 @@
     <div id="classHeader">
         <table class="header-table">
         <tr class="top-aligned-row">
-          <td><strong>Class</strong></td>
+          <td><strong>Module</strong></td>
           <td class="class-name-in-header">Mailtrap</td>
         </tr>
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
+                <a href="../files/lib/mailbox_service_rb.html">
+                lib/mailbox_service.rb
+                </a>
+        <br />
                 <a href="../files/lib/mailtrap_rb.html">
                 lib/mailtrap.rb
                 </a>
@@ -62,12 +66,6 @@
             </td>
         </tr>
 
-        <tr class="top-aligned-row">
-            <td><strong>Parent:</strong></td>
-            <td>
-                Object
-            </td>
-        </tr>
         </table>
     </div>
   <!-- banner header -->
@@ -91,16 +89,6 @@ to disk.
 
    </div>
 
-    <div id="method-list">
-      <h3 class="section-bar">Methods</h3>
-
-      <div class="name-list">
-      <a href="#M000002">accept</a>&nbsp;&nbsp;
-      <a href="#M000001">new</a>&nbsp;&nbsp;
-      <a href="#M000004">serve</a>&nbsp;&nbsp;
-      <a href="#M000003">write</a>&nbsp;&nbsp;
-      </div>
-    </div>
 
   </div>
 
@@ -109,20 +97,15 @@ to disk.
 
     <div id="section">
 
+    <div id="class-list">
+      <h3 class="section-bar">Classes and Modules</h3>
 
-    <div id="constants-list">
-      <h3 class="section-bar">Constants</h3>
+      Class <a href="Mailtrap/Base.html" class="link">Mailtrap::Base</a><br />
+Class <a href="Mailtrap/Mail.html" class="link">Mailtrap::Mail</a><br />
+Class <a href="Mailtrap/MailBoxService.html" class="link">Mailtrap::MailBoxService</a><br />
 
-      <div class="name-list">
-        <table summary="Constants">
-        <tr class="top-aligned-row context-row">
-          <td class="context-item-name">VERSION</td>
-          <td>=</td>
-          <td class="context-item-value">'0.1.0'</td>
-        </tr>
-        </table>
-      </div>
     </div>
+
 
 
 
@@ -130,87 +113,6 @@ to disk.
 
 
     <!-- if method_list -->
-    <div id="methods">
-      <h3 class="section-bar">Public Class methods</h3>
-
-      <div id="method-M000001" class="method-detail">
-        <a name="M000001"></a>
-
-        <div class="method-heading">
-          <a href="Mailtrap.src/M000001.html" target="Code" class="method-signature"
-            onclick="popupCode('Mailtrap.src/M000001.html');return false;">
-          <span class="method-name">new</span><span class="method-args">( host, port, once, msgdir )</span>
-          </a>
-        </div>
-      
-        <div class="method-description">
-          <p>
-Create a <a href="Mailtrap.html#M000001">new</a> <a
-href="Mailtrap.html">Mailtrap</a> on the specified host:port. If once it
-true it will listen for one message then exit. Specify the msgdir where
-messages are written.
-</p>
-        </div>
-      </div>
-
-      <h3 class="section-bar">Public Instance methods</h3>
-
-      <div id="method-M000002" class="method-detail">
-        <a name="M000002"></a>
-
-        <div class="method-heading">
-          <a href="Mailtrap.src/M000002.html" target="Code" class="method-signature"
-            onclick="popupCode('Mailtrap.src/M000002.html');return false;">
-          <span class="method-name">accept</span><span class="method-args">( service )</span>
-          </a>
-        </div>
-      
-        <div class="method-description">
-          <p>
-Service one or more SMTP client connections
-</p>
-        </div>
-      </div>
-
-      <div id="method-M000004" class="method-detail">
-        <a name="M000004"></a>
-
-        <div class="method-heading">
-          <a href="Mailtrap.src/M000004.html" target="Code" class="method-signature"
-            onclick="popupCode('Mailtrap.src/M000004.html');return false;">
-          <span class="method-name">serve</span><span class="method-args">( connection )</span>
-          </a>
-        </div>
-      
-        <div class="method-description">
-          <p>
-Talk pidgeon-SMTP to the client to get them to hand over the message and go
-away.
-</p>
-        </div>
-      </div>
-
-      <div id="method-M000003" class="method-detail">
-        <a name="M000003"></a>
-
-        <div class="method-heading">
-          <a href="Mailtrap.src/M000003.html" target="Code" class="method-signature"
-            onclick="popupCode('Mailtrap.src/M000003.html');return false;">
-          <span class="method-name">write</span><span class="method-args">( from, to_list, message )</span>
-          </a>
-        </div>
-      
-        <div class="method-description">
-          <p>
-Write a plain text dump of the incoming email to a text file. The file will
-be in the @msgdir folder and will be called smtp0001.msg, smtp0002.msg, and
-so on.
-</p>
-        </div>
-      </div>
-
-
-    </div>
 
 
   </div>
