@@ -21,6 +21,9 @@
   <h1 class="section-bar">Classes</h1>
   <div id="index-entries">
     <a href="classes/Mailtrap.html">Mailtrap</a><br />
+    <a href="classes/Mailtrap/Base.html">Mailtrap::Base</a><br />
+    <a href="classes/Mailtrap/Mail.html">Mailtrap::Mail</a><br />
+    <a href="classes/Mailtrap/MailBoxService.html">Mailtrap::MailBoxService</a><br />
   </div>
 </div>
 </body>
