@@ -20,10 +20,9 @@
 <div id="index">
   <h1 class="section-bar">Files</h1>
   <div id="index-entries">
-    <a href="files/History_txt.html">History.txt</a><br />
-    <a href="files/README_txt.html">README.txt</a><br />
-    <a href="files/bin/mailtrap.html">bin/mailtrap</a><br />
+    <a href="files/lib/mailbox_service_rb.html">lib/mailbox_service.rb</a><br />
     <a href="files/lib/mailtrap_rb.html">lib/mailtrap.rb</a><br />
+    <a href="files/test/test_mailtrap_rb.html">test/test_mailtrap.rb</a><br />
   </div>
 </div>
 </body>
