@@ -20,10 +20,23 @@
 <div id="index">
   <h1 class="section-bar">Methods</h1>
   <div id="index-entries">
-    <a href="classes/Mailtrap.html#M000002">accept (Mailtrap)</a><br />
-    <a href="classes/Mailtrap.html#M000001">new (Mailtrap)</a><br />
-    <a href="classes/Mailtrap.html#M000004">serve (Mailtrap)</a><br />
-    <a href="classes/Mailtrap.html#M000003">write (Mailtrap)</a><br />
+    <a href="classes/Mailtrap/Base.html#M000015">accept (Mailtrap::Base)</a><br />
+    <a href="classes/Mailtrap/MailBoxService.html#M000008">add_mail (Mailtrap::MailBoxService)</a><br />
+    <a href="classes/Mailtrap/Mail.html#M000005">created_at (Mailtrap::Mail)</a><br />
+    <a href="classes/Mailtrap/MailBoxService.html#M000010">dispatch (Mailtrap::MailBoxService)</a><br />
+    <a href="classes/Mailtrap/Mail.html#M000002">from (Mailtrap::Mail)</a><br />
+    <a href="classes/Mailtrap/Base.html#M000014">initiate_logging_service (Mailtrap::Base)</a><br />
+    <a href="classes/Mailtrap/Base.html#M000013">initiate_smtp_service (Mailtrap::Base)</a><br />
+    <a href="classes/Mailtrap/Base.html#M000012">initiate_web_service (Mailtrap::Base)</a><br />
+    <a href="classes/Mailtrap/MailBoxService.html#M000009">mails (Mailtrap::MailBoxService)</a><br />
+    <a href="classes/Mailtrap/Mail.html#M000004">message (Mailtrap::Mail)</a><br />
+    <a href="classes/Mailtrap/Mail.html#M000001">new (Mailtrap::Mail)</a><br />
+    <a href="classes/Mailtrap/MailBoxService.html#M000006">new (Mailtrap::MailBoxService)</a><br />
+    <a href="classes/Mailtrap/Base.html#M000011">new (Mailtrap::Base)</a><br />
+    <a href="classes/Mailtrap/Mail.html#M000003">recipient_list (Mailtrap::Mail)</a><br />
+    <a href="classes/Mailtrap/Base.html#M000017">serve (Mailtrap::Base)</a><br />
+    <a href="classes/Mailtrap/MailBoxService.html#M000007">start (Mailtrap::MailBoxService)</a><br />
+    <a href="classes/Mailtrap/Base.html#M000016">write (Mailtrap::Base)</a><br />
   </div>
 </div>
 </body>
