@@ -5,12 +5,12 @@
 
 <!--
 
-     rubymatt's mailtrap-0.1.0 Documentation
+    RDoc Documentation
 
   -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title> rubymatt's mailtrap-0.1.0 Documentation</title>
+  <title>RDoc Documentation</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </head>
 <frameset rows="20%, 80%">
@@ -19,6 +19,6 @@
         <frame src="fr_class_index.html"  name="Classes" />
         <frame src="fr_method_index.html" name="Methods" />
     </frameset>
-    <frame src="files/README_txt.html" name="docwin" />
+    <frame src="files/lib/mailbox_service_rb.html" name="docwin" />
 </frameset>
 </html>
